[package]
name = "liquers-core"
version = "0.1.0"
authors = ["Orest Dubay <orest3.dubay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3"
nom = {version = "^5.1.1", features = ["regexp"]}
nom_locate = "2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
percent-encoding = "2.1"
strum = "0.18"
strum_macros = "0.18"
